# wiwik_app_v2

./: .clang-tidy  .gitignore  CMakeLists.txt  EgDeviceData.h  EgTemperatureChart.h  EgVehicleData.h  app.cpp  app.h  chartwidget.cpp  chartwidget.h  dialogassignsensor.cpp  dialogassignsensor.h  dialogassignsensor.ui  dialogeditvehicles.cpp  dialogeditvehicles.h  dialogeditvehicles.ui  egcar.cpp  egcar.h  egcarsmapmodel.cpp  egcarsmapmodel.h  egcarsmodel.cpp  egcarsmodel.h  egdataprovider.cpp  egdataprovider.h  eghistoryvehiclesmodel.cpp  eghistoryvehiclesmodel.h  egmqttdatasource.cpp  egmqttdatasource.h  egrestdatasource.cpp  egrestdatasource.h  egsettings.cpp  egsettings.h  egtemperaturechart.cpp  egvehiclesmap.cpp  egvehiclesmap.h  geoItem.qml  geomap.qml  historyvehiclesproxymodel.cpp  historyvehiclesproxymodel.h  livevehiclesproxymodel.cpp  (+29 more)
AbstractDataModels/: colordelegate.cpp  colordelegate.h  devicetablemodel.cpp  devicetablemodel.h  liveviewtreemodel.cpp  liveviewtreemodel.h  mapmodel.cpp  mapmodel.h  sensortablemodel.cpp  sensortablemodel.h  vehiclelistmodel.cpp  vehiclelistmodel.h  vehicletablemodel.cpp  vehicletablemodel.h  vehicletreemodel.cpp  vehicletreemodel.h  vehicletreenode.cpp  vehicletreenode.h
CMake/: collect-sources.cmake  cppcheck.cmake  format.cmake  tidy.cmake
Configuration/: configuration.cpp  configuration.h
DataModels/: device.cpp  device.h  gpsdata.cpp  gpsdata.h  gpsmeasure.cpp  gpsmeasure.h  maindevicemodel.cpp  maindevicemodel.h  mainvehiclemodel.cpp  mainvehiclemodel.h  measure.cpp  measure.h  sensor.cpp  sensor.h  vehicle.cpp  vehicle.h  vehmodeltreeitem.cpp  vehmodeltreeitem.h
DataSource/: EgDeviceData.h  EgVehicleData.h  datacontainer.cpp  datacontainer.h  egdataprovider.cpp  egdataprovider.h  egmqttdatasource.cpp  egmqttdatasource.h  egrestdatasource.cpp  egrestdatasource.h
Forms/: formgpshistory.cpp  formgpshistory.h  formgpshistory.ui  formliveview.cpp  formliveview.h  formliveview.ui  formtemperaturehistory.cpp  formtemperaturehistory.h  formtemperaturehistory.ui
QCustomPlot/: .clang-tidy  qcustomplot.h
